[FIX] Fix safari input gap

--- a/src/components/form.css
+++ b/src/components/form.css
@@ -25,8 +25,9 @@
 }
 
 .react-autosuggest__container {
-  @apply absolute left-0 block w-full flex flex-row -mt-px;
+  @apply absolute left-0 block w-full flex flex-row;
   top: 100%;
+  margin-top: -2px;
 }
 
 .react-autosuggest__input {
@@ -57,7 +58,7 @@
 }
 
 .react-autosuggest__suggestions-container--open {
-  @apply -mt-px;
+  margin-top: -2px;
   top: 100%;
   display: block;
   position: absolute;
